--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </li>
 </ul></div></header><main id="maincontent" class="page-main"><div class="headerslider2-w">    <div class="wrap-slider swiper-container">
         <div class="swiper-wrapper">
-            <a href="all-products" class="swiper-slide wrap-slider-item">
+            <a href="" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/1.png">
                             <img src="images/hero_031_3.jpg" alt>
@@ -305,7 +305,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
-                        </a>                    <a href="all-products" class="swiper-slide wrap-slider-item">
+                        </a>                    <a href="" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/4.png">
                             <img src="images/hero_02_1.jpg" alt>
@@ -317,7 +317,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
-                        </a>                    <a href="all-products" class="swiper-slide wrap-slider-item">
+                        </a>                    <a href="" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/hero_01_mobile.jpg">
                             <img src="images/hero_01-dog.jpg" alt>
@@ -329,7 +329,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
-                        </a>                    <a href="all-products" class="swiper-slide wrap-slider-item">
+                        </a>                    <a href="" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/2_1.png">
                             <img src="images/hero_04.jpg" alt>
@@ -808,7 +808,7 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
                     </div>
     </div>
 <p></p>
-<a class="button button-1" href="all-products">המוצרים שלנו</a></div>
+<a class="button button-1" href="">המוצרים שלנו</a></div>
 </div>
 </div></div><a id="contentarea" tabindex="-1"></a>
 <div class="page messages"><div data-placeholder="messages"></div>
