--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </li>
 <li><a href="https://milatin-group.co.il/customer/account/create/" id="idmuPLDZC1">יצירת חשבון</a></li></ul></div></div><div class="header content"><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span>
 <a class="logo" href="https://shiran-shoshana.github.io/" title aria-label="store logo">
-    <img src="images/shiran.png" title alt width="170">
+    <img src="images/shiran.png" title="" alt="" width="170" style="
+    height: 110px;
+    width: 135px;
+">
 </a>
 <!-- app/design/frontend/Worx/LumaRtl/Magento_Theme/templates/html/sections.phtml -->
     <div class="sections nav-sections">
