--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
             <div class="col-right">
                 <div class="fcol-1 fcol">
                     <a class="f-logo" href="/">
-                        <img src="fonts/Logo-Copy-2-Logo-invert%401x.svg" alt>
+                        <img src="images/shiran.png" alt>
                     </a>
                 </div>
                                                         <div class="fcol-2 fcol dw-lg">
