--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="row-col">
         <div class="col-r">
             <div class="image_wrapper">
-                <img src="images/animals_bubles2.png" alt="מי אנחנו">
+                <img src="images/circle.png" alt="מי אנחנו">
             </div>
         </div>
         <div class="col-l">
