--- a/index.html
+++ b/index.html
@@ -33,25 +33,7 @@
 <link rel="preload" as="font" crossorigin="anonymous" href="https://milatin-group.co.il/static/version1677434242/frontend/Worx/LumaRtl/he_IL/fonts/Luma-Icons.woff2">
 <link rel="icon" type="image/x-icon" href="images/facicon-5.png">
 <link rel="shortcut icon" type="image/x-icon" href="images/facicon-5.png">
-<!-- Google Tag Manager -->
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-
-})(window,document,'script','dataLayer','GTM-MJXXCXF');</script>
-
-<!-- End Google Tag Manager -->            <script type="text/x-magento-init">
-        {
-            "*": {
-                "Magento_PageCache/js/form-key-provider": {}
-            }
-        }
-    </script>
     </head>
     <body data-container="body" data-mage-init="{" loaderAjax": {}, "loader": { "icon": "https: milatin-group.co.il static version1677434242 frontend Worx LumaRtl he_IL images loader-2.gif"}}" id="html-body" class="cms-home cms-index-index page-layout-1column">
         
@@ -389,7 +371,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="index-row-2">
     <div class="in container">
         <h4 class="h2-before g55656">מי אנחנו?</h4>
-        <h2 class="h2">אנו במשפחת מילטין יוצרים סביבה וחיים טובים יותר עבור חיות המחמד בישראל.</h2>
+        <h2 class="h2">שירן שושנה נורמולוגית ומלווה הורים בשיולב כלים אדלריאנים ונומרולוגיה</h2>
 
     <div class="row-col">
         <div class="col-r">
