--- a/index.html
+++ b/index.html
@@ -45,20 +45,7 @@
     <span>
         Skip to Content    </span>
 </a>
-<ul class="header links">    <li class="greet welcome" data-bind="scope: 'customer'">
-        <!-- ko if: customer().fullname  -->
-        <span class="logged-in" data-bind="text: new String('Welcome, %1!').replace('%1', customer().fullname)">
-        </span>
-        <!-- /ko -->
-        <!-- ko ifnot: customer().fullname  -->
-        <span class="not-logged-in" data-bind="html:" הודעת ברוכים הבאים ברירת מחדל!""></span>
-                <!-- /ko -->
-    </li>
-  
-<li class="link authorization-link" data-label="או">
-    <a href="https://milatin-group.co.il/customer/account/login/referer/aHR0cHM6Ly9taWxhdGluLWdyb3VwLmNvLmlsLw%2C%2C/">כניסה</a>
-</li>
-<li><a href="https://milatin-group.co.il/customer/account/create/" id="idmuPLDZC1">יצירת חשבון</a></li></ul></div></div><div class="header content"><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span>
+</div></div><div class="header content"><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span>
 <a class="logo" href="https://shiran-shoshana.github.io/" title aria-label="store logo">
     <img src="images/shiran.png" title="" alt="" width="170" style="
     height: 110px;
