--- a/index.html
+++ b/index.html
@@ -104,17 +104,7 @@
 
 
 
-<ul class="header links"><li><a href="https://milatin-group.co.il/customer/account/" id="idYGs7q3tu">החשבון שלי</a></li><li class="link wishlist" data-bind="scope: 'wishlist'">
-    <a href="https://milatin-group.co.il/wishlist/">רשימת המועדפים שלי        <!-- ko if: wishlist().counter -->
-        <span data-bind="text: wishlist().counter" class="counter qty"></span>
-        <!-- /ko -->
-    </a>
-</li>
-
-<li class="link authorization-link" data-label="או">
-    <a href="https://milatin-group.co.il/customer/account/login/referer/aHR0cHM6Ly9taWxhdGluLWdyb3VwLmNvLmlsLw%2C%2C/">כניסה</a>
-</li>
-</ul></div></header><main id="maincontent" class="page-main"><div class="headerslider2-w">    <div class="wrap-slider swiper-container">
+</div></header><main id="maincontent" class="page-main"><div class="headerslider2-w">    <div class="wrap-slider swiper-container">
         <div class="swiper-wrapper">
             <a href="" class="swiper-slide wrap-slider-item">
                         <picture>
