--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <span>
         Skip to Content    </span>
 </a>
-</div></div><div class="header content"><span data-action="toggle-nav" class="action nav-toggle"><span>Toggle Nav</span></span>
+</div></div><div class="header content">
+ 
 <a class="logo" href="https://shiran-shoshana.github.io/" title aria-label="store logo">
     <img src="images/shiran.png" title="" alt="" width="170" style="
     height: 110px;
