--- a/index.html
+++ b/index.html
@@ -164,15 +164,20 @@
                                                 <span class="icon_inner">                        <picture>
                             <img src="images/03_2x_2.png" alt="חיות מאושרות">
                         </picture>
-                        <strong class="t1">10k+</strong>
-                        <span class="t2">חיות מאושרות</span>
+                        <strong class="t1">נומורולוגיה</strong>
+                        <span class="t2">בעזרת במספרים נוכל לדעת אילו כלים מתאימים לכל ילד באופן ספציפי.
+</span>
                         </span>                    </li>
                                     <li>
                                                 <span class="icon_inner">                        <picture>
                             <img src="images/04_2x_2.png" alt="שנים של פעילות">
                         </picture>
-                        <strong class="t1">שנים</strong>
-                        <span class="t2">של פעילות</span>
+                        <strong class="t1">שינוי תפיסה הורית</strong>
+                        <span class="t2">
+                            אני מאמינה שכאשר רוכשים ידע מסויים ואז באים ומנסים את זה בבית זה יכול לעבוד אם הילד ישתף פעולה
+                            על מנת להצליח אני צריכים להבין את התפיסה שעומדת מאחורי זה.
+                            זו גם עבודה תודעתית.
+                        </span>
                         </span>                    </li>
                             </ul>
         </div>
