--- a/index.html
+++ b/index.html
@@ -157,8 +157,12 @@
                                                 <span class="icon_inner">                        <picture>
                             <img src="images/02_2x_2.png" alt="נקודות מכירה">
                         </picture>
-                        <strong class="t1">400</strong>
-                        <span class="t2">נקודות מכירה</span>
+                        <strong class="t1">כלים אדלריאנים </strong>
+                        <span class="t2">
+                            באופן זה נוכל לרכוש ידע ולהבין איך ליצור שיתוף פעולה עם ילדנו
+                            איך נשפר את האוירה בבית
+                            נפחית מאבקי כוח נעניק פיתוח דימוי עצמי לילדים
+                        </span>
                         </span>                    </li>
                                     <li>
                                                 <span class="icon_inner">                        <picture>
@@ -172,7 +176,7 @@
                                                 <span class="icon_inner">                        <picture>
                             <img src="images/04_2x_2.png" alt="שנים של פעילות">
                         </picture>
-                        <strong class="t1">שינוי תפיסה הורית</strong>
+                        <strong class="t1">תפיסה הורית</strong>
                         <span class="t2">
                             אני מאמינה שכאשר רוכשים ידע מסויים ואז באים ומנסים את זה בבית זה יכול לעבוד אם הילד ישתף פעולה
                             על מנת להצליח אני צריכים להבין את התפיסה שעומדת מאחורי זה.
