--- a/index.html
+++ b/index.html
@@ -665,11 +665,12 @@ for (var i = 0; i < prodImageContainersWrappers.length; i++) {
                                                                                                     <li data-post-id="20">
                                 <div class="row-col">
                                     <div class="col-r">
-                                                                                <img src="images/file_copy_2.jpg" alt="קבוצת מילטין השיקה מוצר חדש בישראל ודרך חדשה לטיפול ומניעת פרעושים, קרציות, תולעי סרט ועוד בחתולים">
+                                                                                <img src="images/shira.jpeg" alt="קבוצת מילטין השיקה מוצר חדש בישראל ודרך חדשה לטיפול ומניעת פרעושים, קרציות, תולעי סרט ועוד בחתולים">
                                                                     </div>
                                     <div class="col-l">
                                         <div class="h2">
-                                                                        קבוצת מילטין השיקה מוצר חדש בישראל ודרך חדשה לטיפול ומניעת פרעושים, קרציות, תולעי סרט ועוד בחתולים                                                                    </div>
+                                            הרצאה בנושא חוקים וגבולות המשלבת את עולם המספרים - נומרולוגיה
+                                        </div>
                                         <div class="row-2">
                                                                                                                                 <div class="date-wrp">
                                             <span class="date">29-11-2022</span>
