--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
                         <div class="wrap-slider-text">
                                                             <h1 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h1>
-                                                            <div class="slider-text">הבית של חיות המחמד כבר 55 שנה</div>
-                                                            <button>המוצרים שלנו</button>
+                                                            <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
+                                                            <button>לרכישת כרטיסים</button>
                                                     </div>
 
                         </a>                    <a href="" class="swiper-slide wrap-slider-item">
