--- a/index.html
+++ b/index.html
@@ -66,13 +66,10 @@
                         </picture>
 
                         <div class="wrap-slider-text">
-                            <h1 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h1>
-                            <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
-                            <a href="https://meshulam.co.il/quick_payment?b=69a3857e043bf0ccb35843f497d51e2f">
-                                <button>לרכישת כרטיסים</button>
-                            </a>
-                           
-                        </div>
+                                                            <h1 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h1>
+                                                            <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
+                                                            <button>לרכישת כרטיסים</button>
+                                                    </div>
 
                         </a>                    <a href="https://meshulam.co.il/quick_payment?b=69a3857e043bf0ccb35843f497d51e2f" class="swiper-slide wrap-slider-item">
                         <picture>
@@ -86,7 +83,7 @@
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
-                        </a>                    <a href="" class="swiper-slide wrap-slider-item">
+                        </a>                    <a href="https://meshulam.co.il/quick_payment?b=69a3857e043bf0ccb35843f497d51e2f" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/hero_01_mobile.jpg">
                             <img src="images/hero_01-dog.jpg" alt>
@@ -98,7 +95,7 @@
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
-                        </a>                    <a href="" class="swiper-slide wrap-slider-item">
+                        </a>                    <a href="https://meshulam.co.il/quick_payment?b=69a3857e043bf0ccb35843f497d51e2f" class="swiper-slide wrap-slider-item">
                         <picture>
                                                         <source media="(max-width:767px)" srcset="images/2_1.png">
                             <img src="images/hero_04.jpg" alt>
