--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                         </picture>
 
                         <div class="wrap-slider-text">
-                                                            <h1 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h1>
                                                             <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
                                                             <button>לרכישת כרטיסים</button>
                                                     </div>
@@ -78,8 +77,7 @@
                         </picture>
 
                         <div class="wrap-slider-text">
-                                                            <h2 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h2>
-                                                            <div class="slider-text">הבית של חיות המחמד כבר 55 שנה</div>
+                            <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
@@ -90,8 +88,7 @@
                         </picture>
 
                         <div class="wrap-slider-text">
-                                                            <h2 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h2>
-                                                            <div class="slider-text">הבית של חיות המחמד כבר 55 שנה</div>
+                            <div class="slider-text">שירן שושנה - ייעוץ והכוונה</div>
                                                             <button>המוצרים שלנו</button>
                                                     </div>
 
@@ -102,7 +99,7 @@
                         </picture>
 
                         <div class="wrap-slider-text">
-                                                            <h2 class="curved-text" text-cr="ברוכים הבאים למילטין גרופ" radius-cr="700">ברוכים הבאים למילטין גרופ</h2>
+                                                            
                                                             <div class="slider-text">הבית של חיות המחמד כבר 55 שנה</div>
                                                             <button>המוצרים שלנו</button>
                                                     </div>
